--- a/cms/package/skin/src/main/webapp/screen_ie.css
+++ b/cms/package/skin/src/main/webapp/screen_ie.css
@@ -18,3 +18,6 @@ div.template-type-center-body, div.editor-perspective-center-body {
 table.toolbarRow {
   position: relative;
 }
+
+.hippo-preview-document .hippo-editor-field {overflow: hidden;}
+.column-wrapper {width: 99%; overflow: hidden;}
